# nuscrape

./: .gitignore  Makefile  pyproject.toml
nuscrape/cmds/: main.py
nuscrape/spider/: spider.py
nuscrape/web/: init.py
nuscrape/web/routers/: scrapers.py
tests/: test_nuscrape.py
