[tool.poetry]
name = "nuscrape"
version = "0.1.0"
description = ""
authors = ["Jesper Devantier <jesper.devantier@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
aiohttp = {extras = ["speedups"], version = "^3.7.3"}
pydantic = "^1.7.2"
aiofiles = "^0.6.0"
uvicorn = "^0.12.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
